:ambulance: scrollbar fix
scrollbar fix

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,20 +1,186 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;200;300;400;500;600&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Shrikhand:wght@100;200;300;400;500&display=swap");
+/*! normalize.css v8.0.1 | MIT License | github.com/necolas/normalize.css */
+/**
+ * P. Personnal settings.
+ */
+/* Document
+   ========================================================================== */
+/**
+ * 1. Correct the line height in all browsers.
+ * 2. Prevent adjustments of font size after orientation changes in iOS.
+ */
+html {
+  line-height: 1.15;
+  /* 1 */
+  -webkit-text-size-adjust: 100%;
+  /* 2 */
+}
+
+/* Sections
+   ========================================================================== */
+/**
+ * Remove the margin in all browsers.
+ */
+body {
+  margin: 0;
+}
+
+/**
+ * Render the `main` element consistently in IE.
+ */
+main {
+  display: block;
+}
+
+/**
+ * Correct the font size and margin on `h1` elements within `section` and
+ * `article` contexts in Chrome, Firefox, and Safari.
+ */
+h1 {
+  font-size: 2em;
+  margin: 0.67em 0;
+}
+
+/* Text-level semantics
+   ========================================================================== */
+/**
+ * Remove the gray background on active links in IE 10.
+ */
+a {
+  background-color: transparent;
+  text-decoration: inherit;
+  /* P */
+  color: inherit;
+  /* P */
+}
+
+/* Embedded content
+   ========================================================================== */
+/**
+ * Remove the border on images inside links in IE 10.
+ */
+img {
+  border-style: none;
+}
+
+/* Forms
+   ========================================================================== */
+/**
+ * 1. Change the font styles in all browsers.
+ * 2. Remove the margin in Firefox and Safari.
+ */
+button,
+input {
+  font-size: 100%;
+  /* 1 */
+  line-height: 1.15;
+  /* 1 */
+  margin: 0;
+  /* 2 */
+}
+
+/**
+ * Show the overflow in IE.
+ * 1. Show the overflow in Edge.
+ */
+button,
+input {
+  /* 1 */
+  overflow: visible;
+}
+
+/**
+ * Remove the inheritance of text transform in Edge, Firefox, and IE.
+ * 1. Remove the inheritance of text transform in Firefox.
+ */
+button {
+  /* 1 */
+  text-transform: none;
+}
+
+/**
+ * Correct the inability to style clickable types in iOS and Safari.
+ */
+button,
+[type=button],
+[type=reset],
+[type=submit] {
+  -webkit-appearance: button;
+}
+
+/**
+ * Remove the inner border and padding in Firefox.
+ */
+button::-moz-focus-inner,
+[type=button]::-moz-focus-inner,
+[type=reset]::-moz-focus-inner,
+[type=submit]::-moz-focus-inner {
+  border-style: none;
+  padding: 0;
+}
+
+/**
+ * Restore the focus styles unset by the previous rule.
+ */
+button:-moz-focusring,
+[type=button]:-moz-focusring,
+[type=reset]:-moz-focusring,
+[type=submit]:-moz-focusring {
+  outline: 1px dotted ButtonText;
+}
+
+/**
+ * 1. Correct the odd appearance in Chrome and Safari.
+ * 2. Correct the outline style in Safari.
+ */
+[type=search] {
+  -webkit-appearance: textfield;
+  /* 1 */
+  outline-offset: -2px;
+  /* 2 */
+}
+
+/**
+ * Remove the inner padding in Chrome and Safari on macOS.
+ */
+[type=search]::-webkit-search-decoration {
+  -webkit-appearance: none;
+}
+
+/**
+ * 1. Correct the inability to style clickable types in iOS and Safari.
+ * 2. Change font properties to `inherit` in Safari.
+ */
+::-webkit-file-upload-button {
+  -webkit-appearance: button;
+  /* 1 */
+  font: inherit;
+  /* 2 */
+}
+
+/*-------------------------- Own CSS --------------------------*/
 * {
   box-sizing: border-box;
   font-family: "Roboto", "sans-serif";
 }
 
-/*body{
-  @include widescreen-only {
-    height: 50vh;
-  }
-}*/
-body,
+html,
+body {
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+}
+
+::-webkit-scrollbar {
+  display: none;
+}
+
 .reserv,
 .function,
 .restos {
-  width: 100vw;
+  max-width: 100%;
   margin: 0;
 }
 
@@ -307,28 +473,6 @@ button {
   margin-top: 0.5em;
 }
 
-.restos {
-  background-color: #f6f6f6;
-  position: relative;
-  padding-bottom: 2em;
-}
-@media screen and (min-width: 1280px) {
-  .restos {
-    padding: 2em 15%;
-    padding-bottom: 3em;
-  }
-}
-@media screen and (min-width: 1440px) {
-  .restos {
-    padding: 1em 17.5%;
-    padding-bottom: 3em;
-  }
-}
-.restos h2 {
-  margin-top: 1.5em;
-  margin-bottom: 1em;
-}
-
 .steps {
   counter-reset: compteListe;
 }
@@ -395,6 +539,28 @@ button {
 }
 .step:hover i::before {
   color: #9356dc;
+}
+
+.restos {
+  background-color: #f6f6f6;
+  position: relative;
+  padding-bottom: 2em;
+}
+@media screen and (min-width: 1280px) {
+  .restos {
+    padding: 2em 15%;
+    padding-bottom: 3em;
+  }
+}
+@media screen and (min-width: 1440px) {
+  .restos {
+    padding: 1em 17.5%;
+    padding-bottom: 3em;
+  }
+}
+.restos h2 {
+  margin-top: 1.5em;
+  margin-bottom: 1em;
 }
 
 .resto {
@@ -623,6 +789,7 @@ header {
   justify-content: center;
 }
 header .brand {
+  background-color: #fff;
   padding: 1.25em 0 0.75em 0;
 }
 header .brand__logo {
