--- a/sass/layouts/_header.scss
+++ b/sass/layouts/_header.scss
@@ -4,6 +4,7 @@ header {
   justify-content: center;
 
   .brand {
+    background-color: #fff;
     padding: 1.25em 0 .75em 0;
     &__logo {
       width: 10.5em;
